objects/LBI__LatticeAcctExtDisplayGroup__c.object
<CustomObject>
    <fields>
        <fullName>LBI__GroupName__c</fullName>
        <description>Name of the Group, to be shown in the &quot;Company Profile&quot; tab</description>
        <inlineHelpText>Name of the Group, to be shown in the &quot;Company Profile&quot; tab</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Acct Ext Display Groups</relationshipLabel>
        <relationshipName>LatticeAcctExtDisplayGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__NumberOfFields__c</fullName>
        <label>Number Of Fields</label>
        <summaryForeignKey>LBI__LatticeAcctExtDisplayField__c.LBI__LatticeAcctExtDisplayGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lattice Acct Ext Display Group</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__GroupName__c</columns>
        <columns>LBI__NumberOfFields__c</columns>
        <columns>LBI__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEDG-{0000000000}</displayFormat>
        <label>Account Extension Display Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Acct Ext Display Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>